--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "custom-model",
   "version": "0.1.0",
-  "private": true,
+  "main": "src/customModel.js",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "ajv": "^8.16.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
